Fix "Curly brackets disappear on python import"

umbrello/codeimport/pythonimport.cpp function skipBody
- Add bool dictInitializer initialized to false.
- In while-loop :
  - If token is "}" then
    - if dictInitializer is true then append '}' to body and set
      dictInitializer false;
    - move braceNesting related code to else-part of this if-statement.
  - If token is "{" then
    - if previous token is "=" then append '{' to body and set
      dictInitializer true;
    - move braceNesting related code to else-part of this if-statement.

BUG: 452702
FIXED-IN: 2.34.70 (KDE releases 22.07.70)